--- a/Test_Github_Integration.ipynb
+++ b/Test_Github_Integration.ipynb
@@ -23,30 +23,30 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/rowannekabalan/google-colab/blob/main/Test_Github_Integration.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/rowannekabalan/google-colab/blob/colab-branch-test/Test_Github_Integration.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "VclOxPmpq2Hh",
-        "outputId": "5cf5a69c-9fd9-40d2-d281-cae3780cbc40"
+        "outputId": "18c2091e-9b31-419f-aa07-6b81a40a2fad"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "hello world\n"
+            "hello world, this time in a branch!\n"
           ]
         }
       ],
       "source": [
-        "print(\"hello world, again!\")"
+        "print(\"hello world, this time in a branch!\")"
       ]
     }
   ]
