--- a/Test_Github_Integration.ipynb
+++ b/Test_Github_Integration.ipynb
@@ -28,25 +28,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "VclOxPmpq2Hh",
-        "outputId": "5cf5a69c-9fd9-40d2-d281-cae3780cbc40"
+        "outputId": "8ce84180-68dc-43de-89e0-9fcd555033b4"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "hello world\n"
+            "hello world, from main!\n"
           ]
         }
       ],
       "source": [
-        "print(\"hello world, again!\")"
+        "print(\"hello world, from main!\")"
       ]
     }
   ]
