--- a/Test_Github_Integration.ipynb
+++ b/Test_Github_Integration.ipynb
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -46,7 +46,7 @@
         }
       ],
       "source": [
-        "print(\"hello world, from main!\")"
+        "print(\"hello world, from main! Hi Tom\")"
       ]
     }
   ]
