--- a/Test_Github_Integration.ipynb
+++ b/Test_Github_Integration.ipynb
@@ -46,7 +46,7 @@
         }
       ],
       "source": [
-        "print(\"hello world, from main! Hi Tom\")"
+        "print(\"hello world, from main! Hi Rowanne\")"
       ]
     }
   ]
