--- a/Test_Github_Integration.ipynb
+++ b/Test_Github_Integration.ipynb
@@ -28,25 +28,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "VclOxPmpq2Hh",
-        "outputId": "8ce84180-68dc-43de-89e0-9fcd555033b4"
+        "outputId": "1a9cf3b9-fa3b-4910-b7d0-ec480e9cff74"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "hello world, from main!\n"
+            "hello world, from main! Hi Rowanne - test main\n"
           ]
         }
       ],
       "source": [
-        "print(\"hello world, from main! Hi Rowanne\")"
+        "print(\"hello world, from main! Hi Rowanne - test main\")"
       ]
     }
   ]
